--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@
 		<div class="loginbox">
 		
 			<h1>Login</h1>
-			<form action ="http://localhost:8080/20_CDIO_del3/rest/hello" method = "post">
+			<form action ="http://localhost:8080/20_CDIO_del3/rest/datagetter" method = "get">
 				
 				<div class="inputrow">Username <input class="input" type="text" name="username"></div>
 				<div class="inputrow">Password <input class="input" type="password" name="password"></div>
