Updated the look of userpage and added an example of data

--- a/WebContent/userpage.html
+++ b/WebContent/userpage.html
@@ -2,11 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="mainStyle.css">
 <title>User page</title>
+
 </head>
 <body>
 
-	<div class="mainbody">
+	<div class="mainbody_wide">
+	<button>Add user</button>
+	
 	<table>
 		<tr>
 			<th>ID</th>
@@ -14,6 +18,15 @@
 			<th>Initials</th>
 			<th>Roles</th>
 			<th>CPR</th>
+			<th></th>
+		</tr>
+		<tr>
+			<td>420</td>
+			<td>Mr. Example</td>
+			<td>E</td>
+			<td>Test</td>
+			<td>000000-0000</td>
+			<td><button class="small">X</button><td>
 		</tr>
 	</table>	
 
