--- a/WebContent/userpage.html
+++ b/WebContent/userpage.html
@@ -26,7 +26,15 @@
 			<td>E</td>
 			<td>Test</td>
 			<td>000000-0000</td>
-			<td><button class="small">X</button><td>
+			<td><button class="small" id="420">X</button><td>
+		</tr>
+		<tr>
+			<td>4</td>
+			<td>Mr. Testi</td>
+			<td>T</td>
+			<td>Test, Admin, Pahrmacist, Man</td>
+			<td>000000-0000</td>
+			<td><button class="small" id="4">X</button><td>
 		</tr>
 	</table>	
 
