--- a/WebContent/userpage.html
+++ b/WebContent/userpage.html
@@ -18,16 +18,23 @@ $( document ).ready(function() {
 			console.log(response.userId);
 			for(var i = 0; i < response.length; i++){
 				$('#usertable').append("<tr>");
-				$('#usertable').append("<td><button class=\"small\" id=\"" + response[i].userId + "\">EDIT</button></td>");
+				$('#usertable').append("<td><button class=\"small\" id=\"" 
+						+ response[i].userId 
+						+ "\" type=\"submit\" form=\"updateUser\" value=\""
+						+ response[i].userId
+						+ "\">EDIT</button></td>");
 				$('#usertable').append("<td>" + response[i].userId + "</td>"); 
 				$('#usertable').append("<td>" + response[i].userName + "</td>");
 				$('#usertable').append("<td>" + response[i].ini + "</td>");
 				$('#usertable').append("<td>" + response[i].roles + "</td>");
 				$('#usertable').append("<td>" + response[i].cpr + "</td>");
-				$('#usertable').append("<td><button class=\"small\" id=\"" + response[i].userId + "\">X</button></td>");
+				$('#usertable').append("<td><button class=\"small\" id=\"" 
+						+ response[i].userId 
+						+ "\" type=\"submit\" form=\"deleteUser\" value=\""
+						+ response[i].userId
+						+"\">X</button></td>");
 				$('#usertable').append("</tr>");
 			}
-			//$.each()
 		},
 		error: function(jqXHR, text, error){
 			alert(jqXHR.status + text + error);
@@ -39,8 +46,14 @@ $( document ).ready(function() {
 </head>
 <body>
 
+	<!-- Forms with access to REST backend -->
+	<form id="insertUser" action="rest/useradder" method="post"></form>
+	<form id="updateUser" action="rest/userupdater" method="post"></form>
+	<form id="deleteUser" action="rest/userdeleter" method="post"></form>
+
+	<!-- Main HTML -->
 	<div class="mainbody_wide">
-	<button>Add user</button>
+	<button type="submit" form="insertUser" value="submit">Add user</button>
 	
 	<table>
 		<tbody id="usertable">
@@ -53,24 +66,7 @@ $( document ).ready(function() {
 			<th>CPR</th>
 			<th></th>
 		</tr>
-		<!--Comment 
-		<tr>
-			<td>420</td>
-			<td>Mr. Example</td>
-			<td>E</td>
-			<td>Test</td>
-			<td>000000-0000</td>
-			<td><button class="small" id="420">X</button><td>
-		</tr>
-		<tr>
-			<td>4</td>
-			<td>Mr. Testi</td>
-			<td>T</td>
-			<td>Test, Admin, Pahrmacist, Man</td>
-			<td>000000-0000</td>
-			<td><button class="small" id="4">X</button><td>
-		</tr>
-		-->
+		<!-- Data records are appended here -->
 		</tbody>
 	</table>	
 
