--- a/WebContent/userpage.html
+++ b/WebContent/userpage.html
@@ -22,7 +22,7 @@ $( document ).ready(function() {
 						+ response[i].userId 
 						+ "\" type=\"submit\" form=\"updateUser\" value=\""
 						+ response[i].userId
-						+ "\">EDIT</button></td>");
+						+ "\" name=\"submit\">EDIT</button></td>");
 				$('#usertable').append("<td>" + response[i].userId + "</td>"); 
 				$('#usertable').append("<td>" + response[i].userName + "</td>");
 				$('#usertable').append("<td>" + response[i].ini + "</td>");
@@ -32,7 +32,7 @@ $( document ).ready(function() {
 						+ response[i].userId 
 						+ "\" type=\"submit\" form=\"deleteUser\" value=\""
 						+ response[i].userId
-						+"\">X</button></td>");
+						+"\" name=\"submit\">X</button></td>");
 				$('#usertable').append("</tr>");
 			}
 		},
@@ -47,9 +47,9 @@ $( document ).ready(function() {
 <body>
 
 	<!-- Forms with access to REST backend -->
-	<form id="insertUser" action="rest/useradder" method="post"></form>
-	<form id="updateUser" action="rest/userupdater" method="post"></form>
-	<form id="deleteUser" action="rest/userdeleter" method="post"></form>
+	<form id="insertUser" action="rest/userservice/insert" method="post"></form>
+	<form id="updateUser" action="rest/userservice/update" method="post"></form>
+	<form id="deleteUser" action="rest/userservice/delete" method="post"></form>
 
 	<!-- Main HTML -->
 	<div class="mainbody_wide">
