Added insert method

--- a/WebContent/userpage.html
+++ b/WebContent/userpage.html
@@ -47,7 +47,7 @@ $( document ).ready(function() {
 <body>
 
 	<!-- Forms with access to REST backend -->
-	<form id="insertUser" action="rest/userservice/insert" method="post"></form>
+	<form id="insertUser" action="adduser.html" method="post"></form>
 	<form id="updateUser" action="rest/userservice/update" method="post"></form>
 	<form id="deleteUser" action="rest/userservice/delete" method="post"></form>
 
