index.html virker ikke

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,6 +7,40 @@
 <title>Login</title>
 </head>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="jquery.serialize-object.js"></script>
+
+<script>
+	$( document ).ready(function (){
+		
+		var $username = $('#username');
+		var $password = $('#password');
+		
+		$('#LoginBtn').on('click', function(){
+	<!--		
+			var namePass = {
+				username: $username.val(),
+				password: $password.val()
+			};
+	-->		
+			$.ajax({
+				url: "rest/LoginVerification",
+				data: $('#form').serializeJSON(),
+				contentType: "application/json",
+				method: 'POST',
+				success: function(response){
+					alert('wuhuu');
+				},
+				error: function(){
+					alert('shit happened');
+				}
+			});
+		})
+		
+		
+	})
+</script>
+
 <body>
 
 	<div class="mainbody">
@@ -14,11 +48,11 @@
 		<div class="loginbox">
 		
 			<h1>Login</h1>
-			<form action = "/LoginVerification.java" method = "post">
+			<form action = "" method = "post">
 				
 				<div class="inputrow">Username <input class="input" type="text" name="username"></div>
 				<div class="inputrow">Password <input class="input" type="password" name="password"></div>
-				<div class="inputrow"><input type="submit" value="Login"></div>
+				<div class="inputrow"><input id="LoginBtn" type="submit" value="Login"></div>
 			</form>
 		
 		</div>
