Alt lort virker

--- a/WebContent/userpage.html
+++ b/WebContent/userpage.html
@@ -48,7 +48,7 @@ $( document ).ready(function() {
 
 	<!-- Forms with access to REST backend -->
 	<form id="insertUser" action="adduser.html" method="get"></form>
-	<form id="updateUser" action="rest/userservice/update" method="post"></form>
+	<form id="updateUser" action="updateuser.html" method="get"></form>
 	<form id="deleteUser" action="rest/userservice/delete" method="post"></form>
 
 	<!-- Main HTML -->
